# nbaquant

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.ps1  setup.sh
nbaquant/: app.ipynb  app.py  make_excel.py
src/nbaquant/: app.ipynb  default.ipynb  extra.py  pace.ipynb  penalty.ipynb  rim_defense.ipynb
