[tool.poetry]
name = "nbaquant"
version = "0.1.0"
description = ""
authors = ["Sharif Haason <sharif.haason@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
numpy = "^1.26.4"
scipy = "^1.14.0"
sqlalchemy = "^2.0.31"
psycopg = "^3.2.1"
psycopg2 = "^2.9.9"
nba-api = "^1.5.0"
pyodbc = "^5.1.0"
mysqlclient = "^2.2.4"
cx-oracle = "^8.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pre-commit = "^3.8.0"
nbstripout = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
