[tool.poetry]
name = "nbaquant"
version = "0.1.0"
description = ""
authors = ["Sharif Haason <sharif.haason@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

# Data Manipulation and Analysis
pandas = "^2.2.2"
numpy = "^1.26.4"
scipy = "^1.14.0"
openpyxl = "^3.1.5"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"

# Database Interaction
sqlalchemy = "^2.0.31"
psycopg = "^3.2.1"
psycopg2 = "^2.9.9"
pyodbc = "^5.1.0"
mysqlclient = "^2.2.4"
cx-oracle = "^8.3.0"

# Environment Management
python-dotenv = "^1.0.1"

# API Interaction
nba-api = "^1.5.0"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
# Development Tools
ipykernel = "^6.29.5"
pre-commit = "^3.8.0"
nbstripout = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
