[project]
name = "nbaquant"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    ## data manipulation and analysis
    "pandas",
    "numpy",
    "scipy",
    "openpyxl",
    "matplotlib",
    "seaborn",
    ## database interaction
    "sqlalchemy",
    "pyodbc",
    "psycopg",
    "psycopg2",
    "mysqlclient",
    "cx-oracle",
    ## environment management
    "python-dotenv",
    "ipykernel",
    ## api interaction
    "nba-api",
    ## presentation
    "jinja2"
]

[tool.uv]
dev-dependencies = [
    "pre-commit",
    "nbstripout"
]